--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: Create Release with dist
+name: Create release
 
 on:
   workflow_dispatch: # Manual trigger
@@ -44,15 +44,23 @@ jobs:
       - name: Make binary executable
         run: chmod +x ./dist/index.js
 
-      # Package dist folder and package.json as tarball
-      - name: Package dist folder and package.json as tarball
-        run: tar -czf mcp-stress-tester-${{ github.event.inputs.version }}.tar.gz dist package.json
+      # Create directory structure for packaging
+      - name: Create package directory
+        run: |
+          mkdir -p package
+          cp -r dist package/
+          cp package.json package/
+          cp README.md package/
 
-      # Package dist folder and package.json as zip
-      - name: Package dist folder and package.json as zip
-        run: zip -r mcp-stress-tester-${{ github.event.inputs.version }}.zip dist package.json
+      # Package with package/ prefix as tarball
+      - name: Package as tarball
+        run: tar -czf mcp-stress-tester-${{ github.event.inputs.version }}.tar.gz package
 
-      # Create GitHub release and upload dist
+      # Package with package/ prefix as zip
+      - name: Package as zip
+        run: zip -r mcp-stress-tester-${{ github.event.inputs.version }}.zip package
+
+      # Create GitHub release
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -63,32 +71,10 @@ jobs:
 
             ### Installation
 
-            #### Option 1: Download and extract
-
-            ```bash
-            # For tar.gz
-            curl -L https://github.com/apify/mcp-stress-tester/releases/download/${{ github.event.inputs.version }}/mcp-stress-tester-${{ github.event.inputs.version }}.tar.gz | tar xz
-
-            # For zip
-            curl -L -o mcp-stress-tester.zip https://github.com/apify/mcp-stress-tester/releases/download/${{ github.event.inputs.version }}/mcp-stress-tester-${{ github.event.inputs.version }}.zip
-            unzip mcp-stress-tester.zip
-            ```
-
-            #### Option 2: Install via npm
-
             ```bash
             # Install directly from GitHub release
             npm install -g https://github.com/apify/mcp-stress-tester/releases/download/${{ github.event.inputs.version }}/mcp-stress-tester-${{ github.event.inputs.version }}.tar.gz
             ```
-
-            ### Usage
-
-            ```bash
-            # Basic usage
-            mcp-stress-tester --target "http://your-mcp-server-url" --clients 10
-
-            # For more options
-            mcp-stress-tester --help
             ```
           draft: false
           prerelease: ${{ github.event.inputs.prerelease }}
